fix misaligned bottom buttons

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -148,7 +148,6 @@ body.cacap .cacap-edit-buttons {
 body.cacap .cacap-edit-buttons.cacap-edit-buttons-bottom {
 	position: relative;
 	bottom: auto;
-	width: 940px;
 	margin: 0 auto 3em;
 	color: #777;
 }
